--- a/public/biography/index.html
+++ b/public/biography/index.html
@@ -11,14 +11,14 @@
 
 	<link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400&display=swap" rel="stylesheet"> 
 	
-	<link rel="stylesheet" href="/scss/main.min.17f94978736d8ed508386758012257ab477bb9c503dfd09d34c604b18cf70a17.css" integrity="sha256-F/lJeHNtjtUIOGdYASJXq0d7ucUD39CdNMYEsYz3Chc=" media="screen">
+	<link rel="stylesheet" href="/scss/main.min.beb091ce88a50ef71d14c82ec5092df4e7673a3f1b4a43354cfbed4ad64a41b5.css" integrity="sha256-vrCRzoilDvcdFMguxQkt9OdnOj8bSkM1TPvtStZKQbU=" media="screen">
 
 </head>
 <body>
   <div id="container">
     <header class="page-width">
 			<a href="/">
-	<img src="/Logo.png" />
+	<img src="/Logo.svg" />
 </a>
 
 			<nav>
@@ -36,9 +36,9 @@
       
 <div id="bio-page" class="page-width">
 	<div class="bio">
-		<p>For millennia our fascination with what lies above us has shaped our beliefs, scientific advances, biology and continues to captivate the human imagination. With the recent dawn of technology we have separated ourselves from this wondrous relationship.</p>
-<p>Born 1st August 1988, Star Holden is a self taught artist based in London renowned for inventive minimal design solutions informed by an array of traditional techniques and digital fabrication methods.</p>
-<p>In 2018 Star set up his own practice creating artwork as a medium for capturing natural phenomena and exploring our connection to the cosmos. Using a combination of digital technology, light and motion he creates constantly changing performances to capture the  imagination.</p>
+		<p>For millennia our fascination with what lies above us has shaped our beliefs, scientific advances, our biology and continues to captivate the human imagination. With the recent dawn of technology we have separated ourselves from this wondrous relationship.</p>
+<p>Born August 1988, Star Holden is a self taught artist based in London renowned for inventive minimal design solutions informed by an array of traditional techniques and digital fabrication methods.</p>
+<p>In 2018 Star set up his own practice creating artwork as a medium for capturing natural phenomena and exploring our connection to the cosmos. Using a combination of digital technology, light and motion he creates constantly changing performances to capture the  imagination and reconnect us with our senses.</p>
 
 	</div>
 	<div class="image">
