--- a/public/planetesimal/index.html
+++ b/public/planetesimal/index.html
@@ -11,14 +11,14 @@
 
 	<link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400&display=swap" rel="stylesheet"> 
 	
-	<link rel="stylesheet" href="/scss/main.min.17f94978736d8ed508386758012257ab477bb9c503dfd09d34c604b18cf70a17.css" integrity="sha256-F/lJeHNtjtUIOGdYASJXq0d7ucUD39CdNMYEsYz3Chc=" media="screen">
+	<link rel="stylesheet" href="/scss/main.min.beb091ce88a50ef71d14c82ec5092df4e7673a3f1b4a43354cfbed4ad64a41b5.css" integrity="sha256-vrCRzoilDvcdFMguxQkt9OdnOj8bSkM1TPvtStZKQbU=" media="screen">
 
 </head>
 <body>
   <div id="container">
     <header class="page-width">
 			<a href="/">
-	<img src="/Logo.png" />
+	<img src="/Logo.svg" />
 </a>
 
 			<nav>
@@ -42,7 +42,31 @@
   
   
   
-  <img src="/planetesimal/planetesimal_front_huaf7ab7085c25c236822b511d69ee384b_167978_900x900_fit_q75_box.jpg" alt="" />
+  <img src="/planetesimal/planetesimal_1_hub33d99b1b31f7061251f252cce704a5d_951251_900x900_fit_q75_box.jpg" alt="" />
+  
+  
+  
+  
+  
+  <img src="/planetesimal/planetesimal_2_hu6463b971b5231bbc22177bedee3bcd18_864630_900x900_fit_q75_box.jpg" alt="" />
+  
+  
+  
+  
+  
+  <img src="/planetesimal/planetesimal_3_hu67c1ed8869e73a4a79a1266002efea26_430407_900x900_fit_q75_box.jpg" alt="" />
+  
+  
+  
+  
+  
+  <img src="/planetesimal/planetesimal_4_huf3350756f62e36ec49b12202c296d592_2526656_900x900_fit_q75_box.jpg" alt="" />
+  
+  
+  
+  
+  
+  <img src="/planetesimal/planetesimal_5_hu5896fc55f9d6a1452ca94b10b34940fa_1337080_900x900_fit_q75_box.jpg" alt="" />
   
   
   
@@ -50,12 +74,11 @@
   
 
 	<div class="content">
-	<h2 id="planitesimal-2020">Planitesimal 2020</h2>
-<p>Steel, Plaster, PCB, LED, Code. 746 x 746 x 101 mm</p>
-<p>Planitesimal imagines witnessing the movement of light and shadow cast by light from our sun across the Rheasilvia crater as asteroid 4 Vesta silently tumbles through space.</p>
-<p>Protoplanet Vesta formed at the same time and in the same way unique to only earth and our moon. Dust and gas from the early planetary disk coalesced to form thousands of planetesimals when our solar system was still a nebula. Orbiting our sun within the  asteroid belt between Mars and Jupiter, Vesta represents a snapshot of the early formation of a planet our solar system.</p>
-<p>Surface topography data gathered by NASA&rsquo;s Dawn Spacecraft in 2012 was then sculpted  to represent Vestas primitive surface while hundreds of individual lights hidden within the artwork orchestrate shadows that draw out millions of years of impact events.</p>
-<p>Planitesimal invites us to stand in its presence and witness a snapshot in time as the shadows constantly change.</p>
+	<p>Steel, Plaster, PCB, LED, Code. 746 x 746 x 101 mm</p>
+<p>Planitesimal imagines witnessing the movement of light and shadow across the Rheasilvia crater as asteroid 4 Vesta silently tumbles through space.</p>
+<p>Protoplanet Vesta formed at the same time and in the same way unique to only earth and our moon. Dust and gas from the early planetary disk coalesced to form thousands of planetesimals when our solar system was still a nebula. Orbiting our sun within the  asteroid belt between Mars and Jupiter, Vesta represents a snapshot of the early formation of a planet in our solar system.</p>
+<p>Surface topography data gathered by instruments onboard NASA&rsquo;s Dawn Spacecraft in 2012 is mechanically sculpted into a primitive surface, while hundreds of individual lights hidden within the artwork orchestrate shadows revealing millions of years of impact events.</p>
+<p>Planitesimal invites us to stand in its presence and witness time while the texture transports us to a familiar landscape adding another dimension to an otherwise digital view.</p>
 <p>Photography by <a href="https://olliehammick.com/">Ollie Hammick</a></p>
 
   </div>
